--- a/game/index.css
+++ b/game/index.css
@@ -12,9 +12,12 @@ body {
   display: inline-block;
   padding: 0;
   border: 0;
-  margin: 0;
+  margin: 2px;
+  width: 40px;
+  height: 40px;
   cursor: pointer;
   background: transparent;
+  background-color:rgb(229, 231, 235);
 }
 
 .particle-btn .wrapper {
